# Bayl

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  build.gradle.kts  checkstyle.xml  gradle.properties  manifest.txt  sample.bl  sample.zem  settings.gradle.kts
baylLanguage/: build.gradle.kts
baylLanguage/src/main/java/org/bayl/: JNIExample.java  Launcher.java  Lexer.java  Parser.java  SourcePosition.java  Token.java  TokenType.java
baylLanguage/src/test/java/: Test.java
baylLanguage/src/test/java/org/bayl/: InterpreterTest.java  LexerTest.java  ParserTest.java  PeekReaderTest.java
baylLanguage/src/test/java/util/: TestData.java
baylLanguage/src/test/java/util/bytecode/: BytecodeParserTestData.java
baylLanguage/src/test/java/util/jit/: JITExecutorsWrapperTestDataForMethodsWithOneArg.java  JITExecutorsWrapperTestDataForMethodsWithTwoArgs.java
doc/: ide_program_startup.md
examples/: arrays.bl  loops.bl
jitExecutors/: .env  CMakeLists.txt  build.gradle.kts
jitExecutors/src/main/cpp/: AbstractJITGenerator.cpp  GlobalJitRuntime.cpp  GlobalJitRuntime.h  JITGeneratorFactory.cpp  JNIWrappers.cpp  executeMultiplication.cpp  generateMultiplication.cpp  generateMultiplicationDouble.cpp
jitExecutors/src/main/cpp/arithmeticOperations/: AdditionGenerator.cpp  DecrementGenerator.cpp  DivisionGenerator.cpp  DivisionRemainderGenerator.cpp  DoubleAdditionGenerator.cpp  DoubleDivisionGenerator.cpp  DoubleDivisionRemainderGenerator.cpp  DoubleMultiplicationGenerator.cpp  DoubleSubtractionGenerator.cpp  IncrementGenerator.cpp  IntAdditionGenerator.cpp  IntMultiplicationGenerator.cpp  MultiplicationGenerator.cpp  SubtractionGenerator.cpp  generateAdditionDouble.cpp  generateAdditionInt.cpp  generateDivisionDouble.cpp  generateDivisionRemainderDouble.cpp  generateMultiplicationDouble.cpp  generateMultiplicationInt.cpp
jitExecutors/src/main/cpp/include/: AbstractJITGenerator.h  GlobalJitRuntime.h  GlobalVariables.h  JITGeneratorFactory.h  JNIWrappers.h  Utils.h
jitExecutors/src/main/cpp/include/algorithms/: DeadCodeElimination.h  LoopUnrolling.h  TailCallOptimization.h
jitExecutors/src/main/cpp/include/arithmeticOperations/: AdditionGenerator.h  DecrementGenerator.h  DivisionGenerator.h  DivisionRemainderGenerator.h  DoubleAdditionGenerator.h  DoubleDivisionGenerator.h  DoubleDivisionRemainderGenerator.h  DoubleMultiplicationGenerator.h  DoubleSubtractionGenerator.h  IncrementGenerator.h  IntAdditionGenerator.h  IntMultiplicationGenerator.h  MultiplicationGenerator.h  SubtractionGenerator.h
jitExecutors/src/main/cpp/include/logicalOperations/: AndGenerator.h  EqualsDoubleGenerator.h  EqualsGenerator.h  GreaterEqualGenerator.h  GreaterGenerator.h  LessEqualGenerator.h  LessGenerator.h  NotEqualsDoubleGenerator.h  NotEqualsGenerator.h  NotGenerator.h  OrGenerator.h
jitExecutors/src/main/cpp/logicalOperations/: AndGenerator.cpp  EqualsDoubleGenerator.cpp  EqualsGenerator.cpp  GreaterEqualGenerator.cpp  GreaterGenerator.cpp  LessEqualGenerator.cpp  LessGenerator.cpp  NotEqualsDoubleGenerator.cpp  NotEqualsGenerator.cpp  NotGenerator.cpp  OrGenerator.cpp
jitExecutors/src/main/cpp/logicalOperators/: AndGenerator.cpp  GreaterEqualGenerator.cpp  LessEqualGenerator.cpp  NotGenerator.cpp  OrGenerator.cpp
samples/: factorial_iterative.bl  factorial_recursive.bl  insertion_sort.bl
samples/tasks/: array_tree_algorithm.bl  dictionary_tree_algorithm.bl  factorial_recursive.bl  insertion_sort.bl  sieve_of_eratosthenes.bl
src/: ast.cpp  compiler.cpp  main.cpp
src/main/java/org/bayl/: Interpreter.java  InvalidOperatorException.java  InvalidTypeException.java  Launcher.java  Lexer.java  LexerException.java  Parser.java  ParserException.java  PeekReader.java  SourcePosition.java  Token.java  TokenBuffer.java  TokenType.java  TooFewArgumentsException.java  TypeMismatchException.java  UnsetVariableException.java  ZemException.java
src/main/java/org/bayl/ast/: AddOpNode.java  AndOpNode.java  ArrayNode.java  AssignNode.java  BinaryOpNode.java  BlockNode.java  ConcatOpNode.java  DictionaryEntryNode.java  DictionaryNode.java  DivideOpNode.java  (+31 more)
src/test/java/: Test.java
src/test/java/org/bayl/: InterpreterTest.java  LexerTest.java  ParserTest.java  PeekReaderTest.java
(+327 files in other folders)
